Fixed: Error details box too wide on Error Handler output. Fixed: Error handler caching the style sheet.

--- a/forum/styles/make_style.css
+++ b/forum/styles/make_style.css
@@ -1389,7 +1389,7 @@ a {
     border-left-width: 1px;
     border-style: inset;
     height: 200px;
-    width: 570px;
+    width: 560px;
     padding: 0px 10px 0px 10px;
     overflow: auto;
     text-align: left;
